[package]
name = "web3mq_mls"
authors = ["Web3MQ"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
keywords = ["MLS", "Web3MQ", "RFC9420", "Encryption", "E2EE"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tls_codec = { version = "0.3.0", features = ["derive", "serde", "mls"] }
base64 = "0.21.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

openmls = "0.5"
openmls_traits = "0.2"
openmls_rust_crypto = "0.2"
openmls_basic_credential = "0.2"

[dev-dependencies]
web3mq_mls = { path = "." }
