[package]
name = "web3mq_mls"
authors = ["Web3MQ"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
keywords = ["MLS", "Web3MQ", "RFC9420", "Encryption", "E2EE"]
description = ""
repository = "https://github.com/Generative-Labs/web3mq_mls"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.13"
log = "0.4"
tls_codec = { version = "0.3.0", features = ["derive", "serde", "mls"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

openmls = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main", features = [
    "test-utils",
] }
openmls_traits = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_rust_crypto = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_basic_credential = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"

[dev-dependencies]
web3mq_mls = { path = "." }
