[package]
name = "web3mq_mls"
authors = ["Web3MQ"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "./README.md"
keywords = ["MLS", "Web3MQ", "RFC9420", "Encryption", "E2EE"]
description = ""
repository = "https://github.com/Generative-Labs/web3mq_mls"
# resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
hex = "^0.4"
log = "0.4"
tls_codec = { version = "0.3.0", features = ["derive", "serde", "mls"] }

serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
thiserror = "1.0"

openmls = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main", features = [
    "test-utils",
] }
openmls_traits = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_rust_crypto = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_basic_credential = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"
rexie = "0.4"
# cortex-m = "0.7.7"
lazy_static = "1.4"
ed25519-dalek = "2"
sha2 = "0.10"
instant = { version = "0.1", features = ["wasm-bindgen"] }
tokio = { version = "1.0", features = ["macros"] }

[dev-dependencies]
web3mq_mls = { path = "." }
